--- a/_config.yml
+++ b/_config.yml
@@ -26,7 +26,7 @@ author:
   avatar           : "profile.png"
   name             : "Yinan Bu"
   pronouns         : # example: "she/her"  
-  bio              : "Hi! I am a senior majoring in Statistics in School of Gifted Young, USTC."
+  bio              : "Senior in Statistics (School of the Gifted Young, USTC). Summer research @ UMich Stats."
   # location         : ""
   employer         : "University of Science and Technology of China"
   uri              : "yinanbu.github.io"# URL
